RESOLVED FIXED254891
[IFC] Floats pushed down to LayoutUnit max may trigger unexpected line state
https://bugs.webkit.org/show_bug.cgi?id=254891
Summary [IFC] Floats pushed down to LayoutUnit max may trigger unexpected line state
alan
Reported 2023-04-02 09:18:19 PDT
Attachments
[fast-cq]Patch (5.44 KB, patch)
2023-04-02 09:23 PDT, alan
no flags
alan
Comment 1 2023-04-02 09:23:39 PDT
Created attachment 465735 [details] [fast-cq]Patch
EWS
Comment 2 2023-04-02 16:40:03 PDT
Committed 262496@main (9e694b9ad56e): <https://commits.webkit.org/262496@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 465735 [details].
Note You need to log in before you can comment on or make changes to this bug.